# OpenGL_Renderer

./: CMakeLists.txt  Camera.cpp  Camera.h  EBO.cpp  EBO.h  Mesh.cpp  Model.cpp  Model.h  OpenGL.sln  OpenGL.vcxproj  OpenGL.vcxproj.filters  ShaderClass.cpp  ShaderClass.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h  default.frag  glad.c  light.frag  light.vert  main.cpp  water.frag  water.vert
libraries/include/glad/: glad.h
libraries/libs/: glfw3.lib
models/: plane.gltf
models/Ground/: ground.gltf
models/Skeleton/: skeleton.gltf
models/light/: light.gltf
models/wood/: wood.gltf
